# EMLB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_event_denoisor.py
include/: edn.hpp
options/: dataset_info.yaml  options.py
scripts/: denoisors.py
scripts/src/: edn.cpp
scripts/utils/: event_utils.py  file_utils.py
